# state-observation

./: CMakeLists.txt
misc-tools/: CMakeLists.txt  file-splitter.cpp  mocap-imu-distance.cpp  modbase-flex-merged-file-tester.cpp  model-base-flex-estimator-file-tester-alexis-format.cpp  model-base-flex-estimator-file-tester.cpp  random-tests.cpp
src/: CMakeLists.txt  accelerometer-gyrometer-magnetometer.cpp  accelerometer-gyrometer.cpp  algebraic-sensor.cpp  bidim-elastic-inv-pendulum-dyn-sys.cpp  definitions.cpp  dynamical-system-simulator.cpp  ekf-flexibility-estimator-base.cpp  extended-kalman-filter.cpp  fixed-contact-ekf-flex-estimator-imu.cpp  gaussian-white-noise.cpp  imu-dynamical-system.cpp  imu-elastic-local-frame-dynamical-system.cpp  imu-fixed-contact-dynamical-system.cpp  imu-magnetometer-dynamical-system.cpp  imu-mltpctive-dynamical-system.cpp  kalman-filter-base.cpp  kinetics-observer.cpp  linear-kalman-filter.cpp  logger.cpp  model-base-ekf-flex-estimator-imu.cpp  stable-imu-fixed-contact-dynamical-system.cpp  tilt-estimator.cpp  zero-delay-observer.cpp
unit-testings/: CMakeLists.txt  HRP2LAAS-IMU-Observation.cpp  flex-estimation-test.cpp  imu-multiplicative-test.cpp  imu-test.cpp  model-base-flex-estimator-file-tester.cpp  other-tests.cpp  real-offline-flexibility-estimator.cpp  simple-flex-estimation-test.cpp  test-kalman-filter.cpp  test_acceleration_stabilization.cpp  test_imu-elastic-local-frame-dynamical-system.cpp  test_model-base-ekf-flex-estimator-imu.cpp  test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors.cpp  (+1 more)
(+37 files in other folders)
